# django_watch

./: README.MD  django_watch_bugging-0.1-py3-none-any.whl  re.txt
django_watch_bugging-0.1/django_watch_bugging-0.1/: MANIFEST.in  PKG-INFO  README.rst  setup.cfg  setup.py
django_watch_bugging-0.1/django_watch_bugging-0.1/django_watch/: urls.py
django_watch_bugging-0.1/django_watch_bugging-0.1/django_watch_bugging.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
