[metadata]
name = django_watch_bugging
version = 0.1
description = Django Watch Bugging is used to monitor the VBP application usages.
long_description = file: README.rst
url = https://otextcity.com/9-blog/3-vtu-business-selling-airtime-data-gotv-dstv-startimes-electricity-bills.html
author = Olayanju A. Ajibola
author_email = vtubusinessportal@gmail.com
license = BSD-3-Clause  # Example license
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.X  # Replace "X.Y" as appropriate
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
include_package_data = True
packages = find:

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

